src/components/Select.css
/*
*   Copyright (c) 2018, EPFL/Human Brain Project PCO
*
*   Licensed under the Apache License, Version 2.0 (the "License");
*   you may not use this file except in compliance with the License.
*   You may obtain a copy of the License at
*
*       http://www.apache.org/licenses/LICENSE-2.0
*
*   Unless required by applicable law or agreed to in writing, software
*   distributed under the License is distributed on an "AS IS" BASIS,
*   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
*   See the License for the specific language governing permissions and
*   limitations under the License.
*/

.kgs-select {
    display: inline-block;
    position: relative;
    width: 100%;
    font-size: var(--font-size-small);
    white-space: nowrap;
}

.kgs-select div {
    display: inline-block;
    margin-bottom: 5px;
    margin-right: 20px;
    color: #555;
    font-size: 22px;
    font-weight: normal;
    line-height: 30px;
}

.kgs-select select {
    min-width: 215px;
    background-color: white;
    border-color: white;
    color: var(--color-selected);
    font-size: 22px;
    font-weight: normal;
    padding: 9px  var(--site-margin) 9px 25px;
    cursor: pointer;
    -moz-user-select: none;
    -ms-user-select: none;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    user-select: none;
    -o-transition: box-shadow 0.2s ease-in;
    -webkit-transition: -webkit-box-shadow 0.2s ease-in;
    transition: -webkit-box-shadow 0.2s ease-in;
    transition: box-shadow 0.2s ease-in;
    transition: box-shadow 0.2s ease-in, -webkit-box-shadow 0.2s ease-in;
    -moz-appearance: none;
    -webkit-appearance: none;
    text-transform: capitalize;
}

.kgs-select select:hover,
.kgs-select select:focus {
    box-shadow: 3px 3px 6px var(--box-shadow-2);
    z-index: 1;
}

.kgs-select:after {
    content: "";
    position: absolute;
    top: 50%;
    right: 15px;
    width: 0;
    height: 0;
    margin-top: -3px;
    border-top: 6px solid var(--color-selected);
    border-right: 6px solid transparent;
    border-left: 6px solid transparent;
    pointer-events: none;
}

/* Internet Explorer 10 & 11 */
@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
    .kgs-select select {
        padding: 9px;
    }
    
    .kgs-select:after {
        display: none;
    }
}

